<resources>
    <string name="app_name">Book Store</string>

    <!-- ========== basic words ==========  -->
    <string name="yes">Da</string>
    <string name="no">Ne</string>
    <!-- ========== basic words ==========  -->

    <!-- ========== Navigation ==========  -->
    <string name="home">Početna</string>
    <string name="shoppingCart">Košarica</string>
    <string name="user">Korisnik</string>
    <!-- ========== Navigation ==========  -->


    <!-- ========== Main activity ==========  -->
    <string name="ExitDialog">Pritisnite ponovno za izlaz</string>
    <!-- ========== Main activity ==========  -->

    <!-- ========== login activity ==========  -->

    <string name="loginTV">Prijava</string>
    <string name="emailInputhint">Email</string>
    <string name="passwordInputhint">Lozinka</string>
    <string name="forgotPassword">Zaboravili ste lozinku?</string>
    <string name="btnLogin">Prijava</string>
    <string name="tvNoAccount">Nemate račun?</string>

    <string name="loginComplited">Uspješno ste se prijavili!</string>

    <!-- ========== login activity ==========  -->

    <!-- ========== register activity ==========  -->

    <string name="registerTV">Registracija</string>
    <string name="accountExistLink">Imate već račun?</string>
    <string name="btnRegister">Registracija</string>
    <string name="ConfirmPasswordInputHint">Potvrdite lozinku</string>
    <string name="invalidEmail">Unesite ispravni email!</string>
    <string name="emptyPasswordError">Unestite lozinku!</string>
    <string name="passwordLenghtError">Lozinka je manja od 7 znakova!</string>
    <string name="passwordMatchError">Lozinke nisu jednake!</string>
    <string name="nameInputhint">Ime</string>
    <string name="surnameInputhint">Prezime</string>
    <string name="addressInputhint">Adresa</string>

    <string name="emptyName">Unesite ime!</string>
    <string name="emptySurname">Unesite prezime!</string>
    <string name="emptyAddress">Unesite adresu!</string>
    <string name="emptyCity">Unesite grad!</string>

    <string name="cityInputhint">Grad</string>

    <string name="registerComplited">Registracija je uspješna!</string>


    <!-- ========== register activity ==========  -->

    <!-- ========== Home fragment ==========  -->
    <string name="tvLatestBooks">Najnovije knjige</string>
    <string name="tvLatestComics">Najnoviji stripovi</string>

    <!-- ========== Home fragment ==========  -->


    <!-- ========== Profile fragment ==========  -->
    <string name="LogoutDialog">Odjava?</string>
    <string name="btnLogout">Odjava</string>
    <string name="btnOrders">Narudžbe</string>
    <string name="btnProfile">Profil</string>

    <!-- ========== Profile fragment ==========  -->


    <!-- ========== BookInfo fragment ==========  -->
    <string name="tvBookName">Naziv knjige</string>
    <string name="btnCart">Dodaj u košaricu</string>
    <string name="tvQuantity">Dostupna količina: </string>
    <string name="tvPrice">Cijena: </string>
    <!-- ========== BookInfo fragment ==========  -->


    <!-- ========== top navigation home ==========  -->
    <string name="btnFeatured">Istaknuto</string>
    <string name="btnAllBooks">Sve knjige</string>
    <string name="btnAllComics">Svi stripovi</string>

    <!-- ========== top navigation home ==========  -->

    <!-- ========== ShoppingCart ==========  -->
    <string name="QuantityToBuy">Količina za kupiti:</string>
    <string name="Items">Proizvodi</string>
    <string name="ToPay">Plativa količina</string>
    <string name="CartEmpty">Košarica je prazna.</string>
    <string name="btnContinue">Nastavite</string>
    <string name="tvItems">Proizvodi:</string>
    <string name="tvAmountPayable">Plativa količina:</string>
    <string name="areyousure">Jeste li sigurni?</string>
    <string name="clearCart">Očistite košaricu</string>
    <!-- ========== ShoppingCart ==========  -->


    <!-- ========== Orders fragment ==========  -->
    <string name="tvOrderKey">Ključ narudžbe:</string>
    <string name="tvDate">Datum:</string>
    <string name="tvTotalPrice">Ukupna cijena:</string>
    <string name="tvAddress">Adresa:</string>
    <string name="tvCity">Grad:</string>
    <string name="tvStatus">Status:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- ========== Orders fragment ==========  -->

</resources>