<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/orange_shade"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnFeatured"
                android:textSize="10sp"
                android:textAllCaps="false"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnAllBooks"
                android:textSize="10sp"
                android:textAllCaps="false"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnAllComics"
                android:textSize="10sp"
                android:textAllCaps="false"
                />

        </LinearLayout>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:src="@drawable/ic_baseline_shopping_cart_checkout_24"
            android:padding="10dp"
            />


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>